--- a/CSS/Rabota.css
+++ b/CSS/Rabota.css
@@ -213,16 +213,16 @@ img:after {
 
 .hot-tour-item:hover {
   cursor: pointer;
-  box-shadow: 5px 0px 10px rgb(255, 0, 0), -5px 0px 10px rgb(0, 219, 248),
+  /* box-shadow: 5px 0px 10px rgb(255, 0, 0), -5px 0px 10px rgb(0, 219, 248),
     0px 5px 10px rgb(255, 0, 221), 0px -5px 10px rgb(50, 248, 0);
-  background-color: rgba(255, 255, 255, 0.795);
-  transition: 1s all ease;
+  background-color: rgba(255, 255, 255, 0.795); */
+  transition: 0.5s all ease;
   /* box-shadow: rgba(0, 0, 0, 0.25) -5px 5px, rgba(0, 0, 0, 0.2) -10px 10px,
     rgba(0, 0, 0, 0.15) -15px 15px, rgba(0, 0, 0, 0.1) -20px 20px,
     rgba(0, 0, 0, 0.05) -25px 25px; */
 
-  /* background: rgb(255, 2, 2);
-  background: linear-gradient(
+  /* background: rgb(255, 2, 2); */
+  /* background: linear-gradient(
     180deg,
     rgba(255, 2, 2, 1) 6%,
     rgba(255, 155, 0, 1) 17%,
@@ -286,6 +286,7 @@ img:after {
 .default-price {
   font-size: 1rem;
 }
+/* Отзывы */
 
 .avatar {
   width: 100%;
@@ -311,4 +312,65 @@ hr {
   padding: 0 15%;
   width: 100%;
   box-sizing: border-box;
+}
+
+/* Почему мы */
+
+.information-all {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.information-item {
+  width: 450px;
+  height: 300px;
+  background-color: white;
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.info {
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.info-icon {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.small {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 450;
+  margin-top: 1rem;
+  color: rgba(0, 0, 0, 0.745);
+}
+
+.big {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-top: 0.5rem;
+}
+
+.information-block {
+  height: 450px;
 }
